fix bug button dark mode

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,10 +46,13 @@
 
 /* Dark Mode Button */
 .dark-mode-btn {
+	width: 40px;
+	height: 40px;
+    text-align: center;
     background: none;
     border: none;
     color: var(--text-white);
-    font-size: 1.5rem;
+    font-size: 18px;
     cursor: pointer;
     padding: 10px;
     border-radius: 50%;
